# Network-Services-Faculty-Map

./: .gitignore  README.md
netbox-facilitymap/: ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
netbox-facilitymap/netbox_facilitymap/: __init__.py  api.py  backup.py  dashboard.py  filtersets.py  forms.py  frontend_api.py  imports.py  models.py  navigation.py  ocr.py  preprocess.py  previews.py  search.py  storage.py  tables.py  template_content.py  urls.py  views.py
netbox-facilitymap/netbox_facilitymap/api/: serializers.py  urls.py  views.py
netbox-facilitymap/netbox_facilitymap/management/commands/: facilitymap_backup.py  facilitymap_import.py  facilitymap_restore.py
netbox-facilitymap/netbox_facilitymap/migrations/: 0001_initial.py  0002_room.py  0003_backfill_rooms.py  0004_remove_room_datacenter.py  0005_alter_facilitymapblob_kind.py
netbox-facilitymap/netbox_facilitymap/models/: README.md
netbox-facilitymap/netbox_facilitymap/static/netbox_facilitymap/: .gitignore  app.js  device-shapes.js  editor.js  floor-editor.js  grid.js  import-preview.js  import-uploader.js  import-wizard.js  lib.js  manifest.json  netbox.js  siteplan-editor.js  store.js  style.css
netbox-facilitymap/netbox_facilitymap/templates/netbox_facilitymap/: floor_rooms.html  index.html  room.html  settings.html  site_floors.html
netbox-facilitymap/netbox_facilitymap/templates/netbox_facilitymap/inc/: floor_sheets.html  placement_markers.html
tool/: .gitignore  ARCHITECTURE.md  README.md  config.example.json  preprocess.py  requirements.txt  server.py  start.sh
tool/web/: app.js  floor-editor.js  import-wizard.js  index.html  lib.js  netbox.js  panzoom.js  siteplan-editor.js  store.js  style.css
tool/web/fonts/: OFL.txt
