[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-facilitymap"
version = "1.29.0"
description = "Facility map plugin for NetBox — siteplan → building → floor → room, linked to Locations"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Facility Map" }]
# PDF import runs in-plugin: PDFs are rasterized to floor images by `preprocess.py`.
# pypdfium2 embeds Google's PDFium (the renderer Chrome uses) as a self-contained wheel
# — no system Ghostscript/poppler. It is invoked as a *subprocess* (see imports.py), so
# this native code never loads into a long-lived NetBox worker; these are still declared
# runtime deps because the subprocess shares the NetBox virtualenv.
dependencies = [
    "pypdfium2",
    "Pillow",
]

[tool.setuptools.packages.find]
include = ["netbox_facilitymap*"]

[tool.setuptools.package-data]
netbox_facilitymap = ["templates/**/*", "static/**/*"]
